# wumbo

./: .env.dev  .env.local  .env.prod  .gitignore  CNAME  README.md  asset-manifest.json  index.html  local-wumbo-dev.sh  package.json  shutdown-local-wumbo-dev.sh
app/: package-lock.json  package.json  tsconfig.json  windi.config.js
app/public/: manifest.json  popup.html
app/src/components/: ContextProviders.tsx  CreatorInfo.tsx  TweetEnhancements.tsx  WalletSelect.tsx
app/src/components/common/: Alert.tsx  Avatar.tsx  Badge.tsx  Button.tsx  Spinner.tsx  Tab.tsx  index.tsx
app/src/components/create/: Create.tsx
app/src/components/customize/: Customize.tsx
app/src/components/my-coins/: MyCoins.tsx
app/src/components/profile/: Profile.tsx
app/src/components/trade/: SuccessfulTransaction.tsx  TokenForm.tsx  Trade.tsx  TradeWUM.tsx
app/src/components/wallet/: Wallet.tsx
app/src/constants/: globals.tsx  routes.tsx
app/src/hooks/: usePrevious.tsx
app/src/pages/background/: background.ts
app/src/pages/oauth/: index.tsx
app/src/spl-token-bonding-api/: instruction.ts
app/src/utils/: account.tsx  action.ts  action.tsx  classNames.ts  creatorState.tsx  lambertw.ts  utils.ts  wallet.tsx  walletState.tsx
app/src/wumbo-api/: bindings.ts  state.ts
app/webpack/: webpack.common.js
chrome-extension/: package-lock.json  package.json
chrome-extension/public/: manifest.json
chrome-extension/src/: background.ts  content_script.tsx  creator_store.tsx  globals.tsx  index.css  link_dom_button.tsx  oauth.tsx  options.tsx  popup.tsx  tweet_decorater.tsx  user_decorator.tsx
chrome-extension/src/components/: ActionModal.tsx  App.tsx  Banner.tsx  BuyModal.tsx  ConnectButton.tsx  CreatorInfo.tsx  CreatorView.tsx  Loading.tsx  LoginProvider.tsx  TweetDecorations.tsx  WalletSelect.tsx  annotation.tsx
chrome-extension/src/components/actions/: Buy.tsx  Sell.tsx
chrome-extension/src/components/creator-view/: Buy.tsx  CoinDetails.css  CoinDetails.tsx  CreatorView.css  CreatorView.tsx  CreatorViewInfoHeader.css  CreatorViewInfoHeader.tsx  GetWUM.tsx  Sell.tsx  SellWUM.tsx  SideSwap.tsx  Swap.tsx  Token.css  Token.tsx
chrome-extension/src/components/popup/: DefaultPage.tsx  SelectWalletPage.tsx
chrome-extension/src/constants/: auth0.tsx  globals.tsx  walletProviders.tsx
chrome-extension/src/decorator/: decorator.tsx  tweetDecorater.tsx
chrome-extension/src/solclout-api/: bindings.ts  instruction.ts  state.ts  utils.ts
chrome-extension/src/spl-token-bonding-api/: instruction.ts  state.ts
chrome-extension/src/utils/: account.tsx  action.tsx  auth.tsx  creatorState.tsx  creatorStore.tsx  mintState.tsx  pricing.tsx  spotter.tsx  twitter.tsx  wallet.tsx  walletState.tsx
chrome-extension/src/wumbo-api/: bindings.ts  state.ts
chrome-extension/webpack/: webpack.common.js
cli/: Cargo.toml  README.md
cli/src/: main.rs
extension/: package-lock.json  package.json  windi.config.js
extension/src/components/: App.tsx  ContextProviders.tsx  CreatorInfo.tsx  WumboDrawer.tsx
extension/src/components/common/: CoinDetails.tsx
extension/src/components/create/: Create.tsx
extension/src/components/trade/: SuccessfulTransaction.tsx  TokenPill.tsx  Trade.tsx
extension/src/components/wallet/: Wallet.tsx
extension/src/constants/: globals.tsx  walletProviders.tsx
extension/src/pages/content/: index.tsx
extension/src/pages/popup/: index.tsx
extension/src/spl-token-bonding-api/: state.ts
extension/src/utils/: account.tsx  mintState.tsx  pricing.tsx  spotter.tsx  twitter.tsx  wallet.tsx  walletState.tsx
extension/src/wumbo-api/: bindings.ts
js/: .env.dev  .env.prod  .gitignore  README.md  package.json
js/extension/: package-lock.json  package.json
js/extension/src/components/: TweetEnhancements.tsx
js/extension/src/components/trade/: TokenForm.tsx
js/extension/src/constants/: routes.tsx
js/extension/src/utils/: creatorState.tsx  mintState.tsx
program/: Cargo.toml  README.md
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
rust/: Cargo.toml  bootstrap.sh
rust/spl-token-bonding/cli/: Cargo.toml
rust/spl-token-bonding/cli/src/: main.rs
rust/spl-token-bonding/program/: .gitignore  Cargo.toml
rust/spl-token-bonding/program/src/: instruction.rs  lib.rs  ln.rs  processor.rs  state.rs
rust/spl-token-staking/program/: README.md
rust/spl-token-staking/program/src/: instruction.rs  state.rs
rust/wumbo/cli/: Cargo.toml
rust/wumbo/cli/src/: main.rs
rust/wumbo/program/: Cargo.toml  README.md
rust/wumbo/program/src/: error.rs  instruction.rs  processor.rs  state.rs
spl-token-bonding/cli/: Cargo.toml
spl-token-bonding/cli/src/: main.rs
spl-token-bonding/program/: Cargo.toml  README.md
spl-token-bonding/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  ln.rs  log.rs  processor.rs  spl_token_bonding-keypair.json  state.rs  uint.rs
static/css/: main.114018dd.chunk.css  main.114018dd.chunk.css.map  main.7c8172e1.chunk.css  main.7c8172e1.chunk.css.map
static/js/: 2.a65ff204.chunk.js.LICENSE.txt  3.2bc44981.chunk.js  3.2bc44981.chunk.js.map  3.3b46c2ca.chunk.js  3.3b46c2ca.chunk.js.map  3.88f96e0a.chunk.js  3.88f96e0a.chunk.js.map  main.2c4b53d5.chunk.js  main.2c4b53d5.chunk.js.map  main.923c3b14.chunk.js  main.923c3b14.chunk.js.map  main.99b15fed.chunk.js  main.99b15fed.chunk.js.map  main.a2f66763.chunk.js  main.a2f66763.chunk.js.map  runtime-main.1ab7a640.js  runtime-main.1ab7a640.js.map  runtime-main.4d79eff5.js  runtime-main.4d79eff5.js.map  runtime-main.901e141e.js  runtime-main.901e141e.js.map
wumbo/cli/: Cargo.toml  README.md
wumbo/cli/src/: main.rs
wumbo/program/: Cargo.toml
wumbo/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
