[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
description = "SPL-SolClout Command-line Utility"
edition = "2018"
license = "Apache-2.0"
name = "spl-token-bonding-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.0.1"

[dependencies]
clap = "2.33.3"
console = "0.14.0"
serde_json = "1.0.62"
solana-account-decoder = "=1.7.0"
solana-clap-utils = "=1.7.0"
solana-cli-config = "=1.7.0"
solana-cli-output = "=1.7.0"
solana-client = "=1.7.0"
solana-logger = "=1.7.0"
solana-remote-wallet = "=1.7.0"
solana-sdk = "=1.7.0"
solana-program = "=1.7.0"
spl-token-bonding = { version = "0.0.1", path="../program", features = [ "no-entrypoint" ] }
spl-associated-token-account = "1.0"
spl-token = "3.1.0"
spl-token-swap = "2.1.0"


[[bin]]
name = "spl-token-bonding"
path = "src/main.rs"
