[package]
name = "spl-token-bonding"
version = "0.0.1"
description = "Solana Program Metadata"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.0"
spl-token = { version = "3.1.0", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.8.2"

[dev-dependencies]
proptest = "0.10"
solana-program-test = "1.7.0"
assert_matches = "1.5.0"
solana-sdk = "1.7.0"
log = "0.4.14"

[lib]
crate-type = ["cdylib", "lib"]
