[package]
name = "spl-token-bonding"
version = "0.0.1"
description = "Solana Program Metadata"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.4"
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.9.0"
fastapprox = "0.3.0"
spl-math = { version = "0.1.0", features = [ "no-entrypoint" ] }
uint = "0.9"

[dev-dependencies]
proptest = "1.0.0"
solana-program-test = "1.7.4"
assert_matches = "1.5.0"
solana-sdk = "1.7.4"
log = "0.4.14"

[lib]
crate-type = ["cdylib", "lib"]
