[package]
name = "spl-wumbo"
version = "0.0.1"
description = "Wumbo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.7"
spl-token = { version = "3.1.0", features = [ "no-entrypoint" ] }
spl-name-service = { version = "0.1.0", git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }
spl-token-bonding = { version = "0.0.1", features = [ "no-entrypoint" ], path = "../../spl-token-bonding/program" }
thiserror = "1.0"
borsh = "0.8.2"

[dev-dependencies]
proptest = "0.10"
solana-program-test = "1.6.7"
assert_matches = "1.5.0"
solana-sdk = "1.6.7"
log = "0.4.14"

[lib]
crate-type = ["cdylib", "lib"]
