[package]
name = "spl-wumbo"
version = "0.0.1"
description = "Wumbo"
authors = ["Wum.bo <maintainers@wum.bo>"]
repository = "https://github.com/ChewingGlassFund/wumbo"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.9"
spl-token = { version = "3.1.1", features = [ "no-entrypoint" ] }
spl-name-service = { version = "0.1.1", git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }
spl-token-bonding = { version = "0.0.1", features = [ "no-entrypoint" ], path = "../../spl-token-bonding/program" }
thiserror = "1.0.26"
borsh = "0.9.0"
zeroize = "1.3.0"

[dev-dependencies]
proptest = "0.10"
solana-program-test = "1.7.9"
assert_matches = "1.5.0"
solana-sdk = "1.7.9"
log = "0.4.14"

[lib]
crate-type = ["cdylib", "lib"]
